--- a/package.json
+++ b/package.json
@@ -5,13 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch-poll": "npm run watch -- --watch-poll",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "watch": "vue-cli-service serve && vue-cli-service build --watch"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -21,13 +15,13 @@
     "jquery": "^3.4.1",
     "npm-watch": "^0.6.0",
     "popper.js": "^1.16.1",
-    "semantic-ui-vue": "^0.10.1",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.4.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
+    "vue-video-player": "^5.0.2",
     "vuex": "^3.1.2",
     "vuex-persist": "^2.2.0"
   },
@@ -39,6 +33,7 @@
     "@vue/cli-service": "^4.2.0",
     "cross-env": "^7.0.0",
     "typescript": "~3.5.3",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack-cli": "^3.3.11"
   }
 }
