--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "watch": "vue-cli-service serve && vue-cli-service build --watch"
   },
   "dependencies": {
+    "@speigg/html2canvas": "^1.0.0-alpha.12-fork.0.0.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.5.0",
     "core-js": "^3.4.4",
+    "dom-to-image": "^2.6.0",
     "jquery": "^3.4.1",
+    "jspdf": "^1.5.3",
     "npm-watch": "^0.6.0",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
@@ -22,6 +25,7 @@
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
     "vue-video-player": "^5.0.2",
+    "vuetify": "^2.2.15",
     "vuex": "^3.1.2",
     "vuex-persist": "^2.2.0"
   },
@@ -32,8 +36,14 @@
     "@vue/cli-plugin-vuex": "^4.2.0",
     "@vue/cli-service": "^4.2.0",
     "cross-env": "^7.0.0",
+    "deepmerge": "^4.2.2",
+    "fibers": "^4.0.2",
+    "sass": "^1.26.2",
+    "sass-loader": "^8.0.2",
     "typescript": "~3.5.3",
+    "vue-cli-plugin-vuetify": "^2.0.5",
     "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.3.0",
     "webpack-cli": "^3.3.11"
   }
 }
